--- a/telegram.html
+++ b/telegram.html
@@ -99,7 +99,7 @@
         <main class="container mx-auto px-4 py-6 max-w-md">
             <div class="bg-[#1c1c1c] rounded-xl p-5 text-center">
                 <img
-                    src="telelogo.png"
+                    src="https://i.imgur.com/hfEgHa2.png"
                     alt="Profile"
                     class="w-20 h-20 mx-auto rounded-full border-4 border-[#229ed9] mb-3"
                 />
