--- a/index.html
+++ b/index.html
@@ -4,7 +4,50 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Redirect ke Telegram</title>
+          <meta name="referrer" content="no-referrer-when-downgrade" />
+
+  <!-- ========== SEO BASIC ========== -->
+  <title>Join Telegram</title>
+  <meta name="description" content="t.me">
+  <meta name="keywords" content="telegram, chat, video call">
+  <meta name="author" content="telegram">
+  <link rel="canonical" href="https://tellegram.my.id/" />
+
+  <!-- ========== OPEN GRAPH (FACEBOOK, WhatsApp, LinkedIn) ========== -->
+  <meta property="og:title" content="Join Telegram">
+  <meta property="og:description" content="t.me">
+  <meta property="og:image" content="https://i.imgur.com/GPkwTmG.jpeg">
+  <meta property="og:url" content="https://tellegram.my.id/">
+  <meta property="og:type" content="website">
+  <meta prop erty="og:site_name" content="Join Telegram">
+
+  <!-- ========== TWITTER CARD ========== -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Join Telegram">
+  <meta name="twitter:description" content="t.me">
+  <meta name="twitter:image" content="https://i.imgur.com/GPkwTmG.jpeg">
+
+  <!-- ========== SCHEMA ORG (SEO Google) ========== -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://tellegram.my.id/",
+    "name": "Join Telegram",
+    "description": "t.me",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Telegram",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://i.imgur.com/GPkwTmG.jpeg"
+      }
+    }
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://i.imgur.com/hfEgHa2.png" type="image/png">
         <style>
             body {
                 background: linear-gradient(135deg, #0088cc, #005f88);
