--- a/telegram.html
+++ b/telegram.html
@@ -90,7 +90,7 @@
                 <span class="font-bold text-white">TELEGRAM</span>
             </div>
             <!-- Updated Download Button -->
-            <a href="https://impertinencefiddledeplore.com/d3vq4cwnd?key=5b8fa40d00892763e338c3d384541873" class="btn-download font-bold">
+            <a href="https://highlight.androidisme.com/private-villas-in-st-lucia-with-oceanfront-locations/" class="btn-download font-bold">
                 DOWNLOAD
             </a>
         </header>
@@ -99,7 +99,7 @@
         <main class="container mx-auto px-4 py-6 max-w-md">
             <div class="bg-[#1c1c1c] rounded-xl p-5 text-center">
                 <img
-                    src="telegramlogo.png"
+                    src="telelogo.png"
                     alt="Profile"
                     class="w-20 h-20 mx-auto rounded-full border-4 border-[#229ed9] mb-3"
                 />
@@ -119,7 +119,7 @@
                 </div>
 
                 <!-- Main CTA Button -->
-                <a href="https://impertinencefiddledeplore.com/cy54nakerz?key=7a2e9e99e1ebc2e398f22b9ee6658461"
+                <a href="https://highlight.androidisme.com/private-villas-in-st-lucia-with-oceanfront-locations/"
                     class="btn-download font-bold mx-auto block w-max mb-5">JOIN TELEGRAM NOW
                 </a>
 
