--- a/telegram.html
+++ b/telegram.html
@@ -122,28 +122,19 @@
                 <a href="https://highlight.androidisme.com/private-villas-in-st-lucia-with-oceanfront-locations/"
                     class="btn-download font-bold mx-auto block w-max mb-5">JOIN TELEGRAM NOW
                 </a>
-
-                <!-- Ad Container -->
-                <div
-                    class="border border-dashed border-gray-600 rounded-lg p-2 mb-4"
-                >
-                    <p class="text-xs text-gray-400 mb-2">ADVERTISEMENT</p>
-                    <div id="adsterra-banner" style="max-width:100%;height:90px;overflow:hidden">
-                        <!-- Adsterra Banner Script Here -->
-                        <script type="text/javascript">
-	atOptions = {
-		'key' : '89337e70e0ff91d19b2cddb7ec5880a6',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//impertinencefiddledeplore.com/89337e70e0ff91d19b2cddb7ec5880a6/invoke.js">
-	
-</script>
-                    </div>
-                </div>
+				
+				<!-- Ad Container -->
+       <div class="border border-dashed border-gray-600 rounded-lg p-2 mb-4">
+          <p class="text-xs text-gray-400 mb-2">ADVERTISEMENT</p>
+            <div id="adsterra-banner" style="max-width:100%;height:90px;overflow:hidden;display:flex;align-items:center;justify-content:center;">
+               <!-- Gambar Banner -->
+              <a href="https://highlight.androidisme.com/private-villas-in-st-lucia-with-oceanfront-locations/" rel="noopener">
+               <img src="https://i.imgur.com/5DraAqk.jpeg"
+                 alt="Banner"
+                 style="max-height:90px;width:auto;border-radius:6px;">
+             </a>
+         </div>
+       </div>
             </div>
         </main>
             <!-- Script untuk FB SDK (Opsional) -->
