--- a/telegram.html
+++ b/telegram.html
@@ -131,7 +131,7 @@
               <a href="https://highlight.androidisme.com/private-villas-in-st-lucia-with-oceanfront-locations/" rel="noopener">
                <img src="https://i.imgur.com/5DraAqk.jpeg"
                  alt="Banner"
-                 style="max-height:90px;width:auto;border-radius:6px;">
+                 style="max-width:100%;height:auto;border-radius:8px;">
              </a>
          </div>
        </div>
