--- a/telegram.html
+++ b/telegram.html
@@ -101,7 +101,7 @@
                 <img
                     src="telelogo.png"
                     alt="Profile"
-                    class="w-20 h-20 mx-auto rounded-full border-4 border-[#229ed9] mb-3"
+                    class="w-20 h-20 mx-auto rounded-full border-4 border-[#229ed9] mb-3 object-cover"
                 />
                 <h1 class="text-xl font-bold text-white mb-1">Princess</h1>
                 <p class="text-gray-400 text-sm mb-4">@Princessxxx</p>
