--- a/telegram.html
+++ b/telegram.html
@@ -7,6 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Chanel Princess</title>
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZVGS0QSX2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3ZVGS0QSX2');
+</script>
     <meta name="description" content="Stream + Download Viral Videos. 🔥 EVERYDAY UPDATE 🔥">
 
     <!-- Open Graph / Facebook Meta Tags (Wajib) -->
