--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- ========== OPEN GRAPH (FACEBOOK, WhatsApp, LinkedIn) ========== -->
   <meta property="og:title" content="Join Telegram">
   <meta property="og:description" content="t.me">
-  <meta property="og:image" content="https://i.imgur.com/cFSUpb9.jpeg">
+  <meta property="og:image" content="https://i.imgur.com/0jrf7fF.jpeg">
   <meta property="og:url" content="https://tellegram.my.id/">
   <meta property="og:type" content="website">
   <meta prop erty="og:site_name" content="Join Telegram">
@@ -25,7 +25,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Join Telegram">
   <meta name="twitter:description" content="t.me">
-  <meta name="twitter:image" content="https://i.imgur.com/cFSUpb9.jpeg">
+  <meta name="twitter:image" content="https://i.imgur.com/0jrf7fF.jpeg">
 
   <!-- ========== SCHEMA ORG (SEO Google) ========== -->
   <script type="application/ld+json">
