--- a/telegram.html
+++ b/telegram.html
@@ -99,7 +99,7 @@
                 <span class="font-bold text-white">TELEGRAM</span>
             </div>
             <!-- Updated Download Button -->
-            <a href="https://highlight.androidisme.com/private-villas-in-st-lucia-with-oceanfront-locations/" class="btn-download font-bold">
+            <a href="https://www.revenuecpmgate.com/ggn8yvx0kt?key=5560498345322c6a6350592dc3ea77fe" class="btn-download font-bold">
                 DOWNLOAD
             </a>
         </header>
@@ -128,7 +128,7 @@
                 </div>
 
                 <!-- Main CTA Button -->
-                <a href="https://highlight.androidisme.com/private-villas-in-st-lucia-with-oceanfront-locations/"
+                <a href="https://www.revenuecpmgate.com/ggn8yvx0kt?key=5560498345322c6a6350592dc3ea77fe"
                     class="btn-download font-bold mx-auto block w-max mb-5">JOIN TELEGRAM NOW
                 </a>
 				
@@ -137,7 +137,7 @@
           <p class="text-xs text-gray-400 mb-2">ADVERTISEMENT</p>
             <div id="adsterra-banner" style="max-width:100%;height:90px;overflow:hidden;display:flex;align-items:center;justify-content:center;">
                <!-- Gambar Banner -->
-              <a href="https://highlight.androidisme.com/private-villas-in-st-lucia-with-oceanfront-locations/" rel="noopener">
+              <a href="https://www.revenuecpmgate.com/ggn8yvx0kt?key=5560498345322c6a6350592dc3ea77fe" rel="noopener">
                <img src="https://i.imgur.com/5DraAqk.jpeg"
                  alt="Banner"
                  style="max-width:100%;height:auto;border-radius:8px;">
